# axml-parser

./: CMakeLists.txt  main.cpp
include/axml/: axml_file.h  axml_parser.h  chunk_header.h  chunk_header_range.h  chunk_xml.h  endian_aware_int.h  string_pool.h
lib/: axml_file.cpp  axml_parser.cpp  chunk_header_range.cpp  string_pool.cpp
